fixed footer on mobile

--- a/contact.css
+++ b/contact.css
@@ -179,12 +179,11 @@ li.mail a {
 }
 /*----------------------Footer---------------------*/
 	footer {
-    position: absolute;
-    bottom: 0;
+    position: static;
     height: 75px;
     width: 100%;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
 }
 	
 }
@@ -210,7 +209,7 @@ footer {
     height: 75px;
     width: 100%;
     text-align: center;
-    margin: auto;
+    margin: 0 auto;
 }
 }
 
